test/pass/44-match_deeper.perk
import "stdio.h"

type List =
    | Empty
    | Cons (int, List)

fun main(): void {
    let l : List = Cons(10, Cons(20, Empty));

    match (l) {
        Cons(_, Cons(`{20}, _)) {
            printf("Banana\n");
        },
        _ {
            printf("Not Banana\n");
        }
    }
}